[tool.poetry]
name = "voxpop"
version = "0.1.0"
description = ""
authors = ["nurmash98 <nurmash98@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
unicorn = "^2.0.1.post1"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
